--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,11 @@
-
-hr{
+hr {
     margin-top: 1vw;
     margin-bottom: 1vw;
     border: 0;
     border-top: 1vw;
 }
-.container{
+
+.container {
     align-content: center;
     padding-right: 1vw;
     padding-left: 1vw;
@@ -13,41 +13,121 @@ hr{
     padding-bottom: 1vw;
     margin-right: auto;
     margin-left: auto;
-    
+
 }
-.media{
-    padding:1vw;
+
+.media {
+    padding: 1vw;
 }
-.media-object{
+
+.media-object {
     display: unset;
 }
 
-.media-left{
+.media-left {
     vertical-align: middle;
-    width:25%;
-    margin:1vw;
-    padding:1vw;
+    width: 25%;
+    margin: 1vw;
+    padding: 1vw;
 }
-.media-right{
+
+.media-right {
     vertical-align: middle;
-    width:25%;margin:1vw;
-    padding:1vw;
+    width: 25%;
+    margin: 1vw;
+    padding: 1vw;
 
 }
 
+
+
+
+@media only screen and (max-width: 600px) {
+    body {
+
+        width: 100%;
+        margin: auto;
+       
+
+    }
+
+
+}
 
 @media only screen and (min-width: 600px) {
-    body{ 
+    body {
+
+        width: 600px;
+        margin: auto;
+      
+
+    }
+    p{
+        font-size:2.25vw; 
+    }
+
+
+}
+
+@media only screen and (min-width: 768px) {
+    .container {
+        width: 600px;
+        margin: auto;
+    }
+
+    body {
+
+        width: 600px;
+        margin: auto;
+
+        justify-content: center;
         
-        width:600px;
-        margin-left: 25vw;
-        margin-right: 25vw;
+
+    }
+    p{
+        font-size:1.75vw; ;
+    }
+
+
+}
+
+@media only screen and (min-width: 992px) {
+    .container {
+        width: 600px;
+        margin: auto;
+    }
+
+    body {
+
+        width: 750px;
+        margin: auto;
+
+        justify-content: center;
+        
+
+    }
+    /* For desktop: */
+    p{
+        font-size:1.5vw; ;
+    }
+
+
+
+}
+
+@media only screen and (min-width: 1200px) {
+    body {
+
+        width: 1000px;
+        margin: auto;
        
-       
+        
+
     }
    
-   
-  }
-  
+ p{
+        font-size:1.25vw; ;
+    }
+}
  
     
